# pura-utils

./: README.md
.github/workflows/: ci.yaml
installer/: cargo-installs  exists-install  golang-installs
python-src/: P_README.md  pyproject.toml  setup.cfg
shellscripts/: clipcopy  clippaste  gifme  group-and-termgraph  html-head  img-download  ix  json-compress  openurl  openurls  rotate-img  to-jpg  to-png  unique-ignore-case
